Only fixed position header on narrow, tall screens

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,10 +1,6 @@
 /* Site Header */
 
 .site-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 2;
   width: 100%;
   background: #fff;
   box-sizing: border-box;
@@ -48,13 +44,23 @@
   }
 }
 
-.page {
-  padding-top: 49px;
-  @media screen and (min-width: 28.125em) {
-    padding-top: 58px;
+/* Fixed Header */
+
+@media screen and (max-width: 56.24em) and (min-height: 32em) {
+  .site-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
   }
-  @media screen and (min-width: 56.25em) {
-    padding-top: 74px;
+  .page {
+    padding-top: 49px;
+    @media screen and (min-width: 28.125em) {
+      padding-top: 58px;
+    }
+    @media screen and (min-width: 56.25em) {
+      padding-top: 74px;
+    }
   }
 }
 
